# libstf

./: .clang-format  .env  .gitignore  CMakeLists.txt  README.md
examples/01_output_buffer_manager/: CMakeLists.txt  README.md
examples/01_output_buffer_manager/src/: main.cpp
hardware/src/: vfpga_top.svh
hardware/src/hdl/: common.sv  data_interfaces.sv
hardware/src/hdl/axi/: axi_demultiplexer.sv  axi_multiplexer.sv
hardware/src/hdl/config/: mem_config.sv  stream_config.sv
hardware/src/hdl/config/registers/: config_write_fifo.sv
hardware/src/hdl/crossbar/: coupler.sv  crossbar.sv  decoupler.sv  reorder.sv  reorder_decoupler.sv  tagged_duplicator.sv  tagged_multiplexer.sv
hardware/src/hdl/dict/: deduplicate.sv  deduplicate_stage.sv  dictionary.sv  duplicate.sv  typed_dictionary.sv
hardware/src/hdl/normalization/: barrel_shifter.sv  data_compactor.sv  data_compactor_level.sv  data_normalizer.sv
hardware/src/hdl/output/: output_writer.sv  stream_writer.sv
hardware/src/hdl/stream/: data_adapters.sv  data_adapters_typed.sv  data_demultiplexer.sv  data_duplicator.sv  data_lookahead.sv  data_sink.sv  data_width_converter.sv  data_zip.sv
hardware/src/hdl/util/: demultiplexer.sv  null_beat_suppressor.sv  skid_buffer.sv  sorted_seq_to_bitmask.sv  stream_profiler.sv
hardware/unit-tests/: data_width_converter_test.py  lookahead_test.py
hardware/unit-tests/libstf_utils/: memory_manager.py  output_writer_test_case.py
hardware/unit-tests/vfpga_tops/: data_lookahead_test.sv  data_width_converter_test.sv  dict_test.sv  hasher_test.sv  normalizer_test.sv  output_writer_test.sv  sorted_seq_to_bitmask_test.sv  typed_dict_test.sv
scripts/: install_jemalloc.sh  setup_simulation.sh
software/: CMakeLists.txt
software/cmake/: libstfConfig.cmake.in
software/libstf/: buffer.cpp  buffer.hpp  common.cpp  common.hpp  configuration.cpp  configuration.hpp  error_handling.hpp  logging.cpp  logging.hpp  memory_pool.cpp  memory_pool.hpp  output_buffer_manager.cpp  output_buffer_manager.hpp  output_handle.cpp  output_handle.hpp  profiling.cpp  profiling.hpp  tlb_manager.cpp  tlb_manager.hpp  util.cpp  util.hpp
